test/tests/errors/error-file-eof-wrong-arg-count.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    output eof(f, bf);
}